# kangkungku

./: .env  .gitignore  README.md  activity.md  check_db.py  data.md  database.sql  deploy.md  erd.drawio  erd.md  expert_system.db  package-lock.json  pyproject.toml  requirements.txt  seed.py  tebar_benih.py  uji.md  vercel.json
api/: index.py
app/: basisdata.py  crud.py  database.py  expert_system.py  main.py  model.py  models.py  operasi.py  schemas.py  security.py  sistem_pakar.py  utama.py
app/routers/: admin.py  auth.py
diagram/desain/: admin-hapus-aturan.drawio  admin-hapus-gejala.drawio  admin-hapus-penyakit.drawio  admin-hapus-user.drawio  admin-lihat-aturan.drawio  admin-lihat-gejala.drawio  admin-lihat-penyakit.drawio  admin-lihat-user.drawio  admin-tambah-aturan.drawio  admin-tambah-gejala.drawio  admin-tambah-penyakit.drawio  admin-tambah-user.drawio  admin-update-aturan.drawio  admin-update-gejala.drawio  admin-update-penyakit.drawio  admin-update-user.drawio  admin_dashboard.drawio  auth.drawio  (+9 more)
scratch/: build_kangkung_flowcharts.py  data-forward-chaining.txt  extract_pdf.py  generate_erd.py  test_admin.py  test_calculation.py  test_register.py
static/: admin.html  blog.html  dasbor.html  dashboard.html  diagnosa.html  diagnosis.html  encyclopedia.html  ensiklopedia.html  hasil.html  index.html  kalkulator.html  komunitas.html  login.html  register.html
templates/: admin.html  base.html  blog.html  calculator.html  community.html  dashboard.html  diagnosis.html  encyclopedia.html  guide.html  index.html  login.html  register.html  result.html
(+81 files in other folders)
